fixed height / last cell width to prevent bad horizontal scroll effect

--- a/source/css/LightPivot.css
+++ b/source/css/LightPivot.css
@@ -181,7 +181,7 @@
     box-sizing: border-box;
     bottom: 0;
     width: 100%;
-    height: 19px;
+    height: 20px;
     font-size: 14px;
     border: 1px solid rgb(208, 208, 208);
     background: #F0F0F0;
